--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -83,8 +83,7 @@ body {
     border-bottom-color: hsl(60, 50%, 50%);
     color: #fff;
   }
-  &.active,
-  &.active:hover {
+  &.active {
     opacity: 1;
     border-bottom-color: hsl(120, 50%, 50%);
     color: #fff;
